<resources>
    <string name="app_name" translatable="false">PlantCruiser</string>
    <string name="language">ENG</string>
    <string name="enter_plant_name">Enter plant name</string>
    <string name="enter_plant_description">Enter plant description</string>
    <string name="select_image">Select image</string>
    <string name="finish">Finish</string>
    <string name="database">Database</string>
    <string name="my_plants">My Plants</string>
    <string name="suggest_a_plant">Suggest a plant</string>
    <string name="edit_plant">Edit plant</string>
    <string name="add_plant">Add plant</string>
    <string name="remove_plant">Remove plant</string>
    <string name="watering">Watering</string>
    <string name="fertilizing">Fertilizing</string>
    <string name="plants">Plants</string>
    <string name="environment_sensor">Environment Sensor</string>
    <string name="manual_selection">Manual Selection</string>
    <string name="date_calendar_button">Date/Calendar</string>
    <string name="difficulty_level">Difficulty Level</string>
    <string name="season">Season</string>
    <string name="location">Location</string>
    <string name="sun_conditions">Sun Conditions</string>
    <string name="temperature">Temperature</string>
    <string name="plant_info">Plant Info</string>
    <string name="plant_id">ID:</string>
    <string name="plant_indoor">Indoor:</string>
    <string name="plant_edible">Edible:</string>
    <string name="plant_cycle">Cycle:</string>
    <string name="plant_sunlight">Sunlight:</string>
    <string name="plant_location">Location:</string>
    <string name="plant_season">Season:</string>
    <string name="plant_watering">Watering frequency:</string>
    <string name="plant_name">PLANT NAME</string>
    <string name="dialog_language_select">Select language</string>
    <string name="dialog_accept">Accept</string>
    <string name="dialog_cancel">Cancel</string>
    <string name="plants_db">Plants Database</string>
    <string name="previous_page">Previous</string>
    <string name="next_page">Next</string>
    <string name="diseases_db">Disease Database</string>
    <string name="perennial">Perennial</string>
    <string name="annual">Annual</string>
    <string name="biennial">Biennial</string>
    <string name="biannual">Biannual</string>
    <string name="frequent">Frequent</string>
    <string name="average">Average</string>
    <string name="minimum">Minimum</string>
    <string name="none">none</string>
    <string name="full_shade">Full shade</string>
    <string name="part_shade">Part shade</string>
    <string name="sun_part_shade">Sun-part shade</string>
    <string name="full_sun">Full sun</string>
    <string name="herbaceous_perennial">Herbaceous Perennial</string>
    <string name="edit">edit</string>
    <string name="planting_date">Planting date:</string>
    <string name="fertilizing_frequency">Fertilizing frequency:</string>
    <string name="disease">Disease:</string>
    <string name="enter_date">Enter planting date</string>
    <string name="enter_sunlight_level">Enter sunlight level</string>
    <string name="enter_fertilizing_frequency">Enter fertilizing frequency</string>
    <string name="enter_watering_frequency">Enter watering frequency</string>
    <string name="enter_plant_disease">Enter plant disease</string>
    <string name="empty_plant_msg">Can\'t add empty plant</string>
    <string name="no_camera_permissions_msg">Can\'t take picture without permission</string>
    <string name="no_gallery_permissions_msg">Can\'t access gallery without permission</string>
    <string name="take_picture">Take picture</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="remove_plant_dialog_text">Are you sure you want to remove this plant?</string>
    <string name="remove_plant_dialog">Remove this plant</string>
    <string name="indoor">Indoor</string>
    <string name="choose_parameters">Choose Parameters</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="enter_temperature">Enter temperature in Celsius</string>
    <string name="no_location_permission">Can\'t access location without permission</string>
    <string name="no_light_sensor_msg">Couldn\'t use light sensor</string>
    <string name="no_ambient_temp_sensor_msg">Couldn\'t use ambient temperature sensor</string>
    <string name="suggested">Suggested</string>
    <string name="no_suggested_plants_msg">Couldn\'t find plants for paramaters</string>
</resources>