<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="16dp"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".ui.suggestAPlant.SuggestAPlantParamsSelectionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="36dp"
        android:gravity="center"
        android:text="@string/choose_parameters"
        android:textSize="24sp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical">

        <Switch
            android:id="@+id/indoorsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:text="@string/indoor"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:gravity="start"
            android:text="@string/sun_conditions"
            android:textSize="18sp" />

        <RadioGroup
            android:id="@+id/sunConditionsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:orientation="vertical">

            <RadioButton
                android:id="@+id/fullShade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_shade" />

            <RadioButton
                android:id="@+id/partShade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/part_shade" />

            <RadioButton
                android:id="@+id/fullSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_sun" />
        </RadioGroup>

        <EditText
            android:id="@+id/temperatureText"
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:inputType="numberSigned|numberDecimal"
            android:hint="@string/enter_temperature" />

        <Button
            android:id="@+id/environmentSensorButton"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/environment_sensor">

        </Button>

        <Button
            android:id="@+id/finishButton"
            style="@style/CustomButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/finish"
             />

    </LinearLayout>


</LinearLayout>