<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:padding="16dp"
    android:layout_marginTop="16dp"
    tools:context=".ui.suggestAPlant.SuggestAPlantManualSelectionFragment">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textSize="24sp"
        android:text="@string/choose_parameters"
        android:layout_marginBottom="36dp">

    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:orientation="vertical">
        <TextView
            android:textSize="18sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/indoors"
            android:gravity="start"
            android:layout_marginBottom="8dp"/>

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/indoorsSwitch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textOff="@string/no"
            android:textOn="@string/yes"
            android:layout_marginBottom="24dp" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sun_conditions"
            android:gravity="start"
            android:textSize="18sp"
            android:layout_marginBottom="8dp"/>

        <RadioGroup
            android:id="@+id/sunConditionsGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginBottom="16dp">

            <RadioButton
                android:id="@+id/fullShade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_shade" />

            <RadioButton
                android:id="@+id/partShade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/part_shade" />

            <RadioButton
                android:id="@+id/sunPartShade"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sun_part_shade" />

            <RadioButton
                android:id="@+id/fullSun"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/full_sun" />
        </RadioGroup>

        <EditText
            style="@style/CustomEditText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/enter_temperature" />

    </LinearLayout>




</LinearLayout>