<?xml version="1.0" encoding="utf-8"?>
<!-- layout for the homescreen -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context=".MainMenuFragment">

    <Button
        style="@style/CustomButton"
        android:id="@+id/lang_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:text="@string/language"
        app:icon="@drawable/lang_icon"
        >

    </Button>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:text="@string/app_name"
        android:textSize="32sp">


    </TextView>

    <Button
        style="@style/CustomButton"
        android:id="@+id/database_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/database">

    </Button>

    <Button
        style="@style/CustomButton"
        android:id="@+id/my_plants_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/my_plants">

    </Button>

    <Button
        style="@style/CustomButton"
        android:id="@+id/suggest_a_plant_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/suggest_a_plant">

    </Button>

    <Button
        style="@style/CustomButton"
        android:id="@+id/plant_finder_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/plant_finder">

    </Button>


</LinearLayout>