<?xml version="1.0" encoding="utf-8"?>
<!-- layout for the homescreen -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:layout_marginTop="62dp"
    android:padding="16dp">

    <Button
        style="@style/CustomButton"
        android:id="@+id/difficultyLevelButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/difficulty_level"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

    </Button>

    <Button
        style="@style/CustomButton"
        android:id="@+id/seasonButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/season"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

    </Button>

    <Button
        style="@style/CustomButton"
        android:id="@+id/locationButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/location"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

    </Button>

    <Button
        style="@style/CustomButton"
        android:id="@+id/sunConditionsButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sun_conditions"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

    </Button>

    <Button
        style="@style/CustomButton"
        android:id="@+id/temperatureButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/temperature"
        android:padding="16dp"
        android:layout_marginBottom="16dp">

    </Button>


</LinearLayout>