<?xml version="1.0" encoding="utf-8"?>
<!-- layout for the plant tracker -->
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        android:gravity="center"
        >

        <TextView
            android:id="@+id/my_plants_label"
            android:textAllCaps="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="8dp"
            android:text="@string/my_plants"
            android:textColor="@android:color/darker_gray"
            android:textSize="24sp"
            />

        <Button
            style="@style/CustomButton"
            android:id="@+id/edit_plants_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/edit"
            android:layout_marginTop="8dp"/>

        <Button
            style="@style/CustomButton"
            android:id="@+id/add_plant_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/add_plant"
            android:layout_marginTop="8dp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerView_plants"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"/>


    </LinearLayout>
</ScrollView>
